[workspace]
members = ["crates/*"]

[workspace.package]
version = "1.0.0"
authors = ["blujay <the.blu.dev@gmail.com>"]
description = "An object script replacement engine for Super Smash Bros. Ultimate"
edition = "2021"
repository = "https://github.com/blu-dev/smashline-2"

[workspace.dependencies]
Inflector = "0.11"
proc-macro-crate = "1.3.1"
proc-macro-error = "1"
proc-macro2 = "1"
quote = "1"
skyline = "0.2"
syn = { version = "1", features = ["full"] }

[package]
name = "smashline-plugin"
version.workspace = true
authors.workspace = true
edition.workspace = true

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline.workspace = true
smashline-macro.path = "crates/smashline-macro"
smashline.path = "crates/smashline"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
