[workspace]
members = ["crates/*"]

[workspace.package]
version = "1.2.4"
authors = ["blujay <the.blu.dev@gmail.com>"]
description = "An object script replacement engine for Super Smash Bros. Ultimate"
edition = "2021"
repository = "https://github.com/blu-dev/smashline-2"

[workspace.dependencies]
Inflector = "0.11"
proc-macro-crate = "1.3.1"
proc-macro-error = "1"
proc-macro2 = "1"
quote = "1"
skyline = "0.2"
syn = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }

[package]
name = "smashline-plugin"
version.workspace = true
authors.workspace = true
edition.workspace = true

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
acmd-engine = { path = "crates/acmd-engine" }
skyline.workspace = true
smashline = { path = "crates/smashline", features = ["smash-rs"] }
smash = { git = "https://github.com/blu-dev/smash-rs" }
locks.path = "crates/locks"
paste = "1"
vtables.path = "crates/vtables"
lua_bind_hash = "1.0.1"
rtld.path = "crates/rtld"
once_cell = "1"
prc-rs = { version = "1.6.1", features = ["indexmap-std"] }
resources.path = "crates/resources"
smash_script = { git = "https://github.com/blu-dev/smash-script", branch = "development" }

[patch.'https://github.com/BenHall-7/hash40-rs']
hash40 = { git = "https://github.com/blu-dev/hash40-rs", branch = "patch-1" }

# [patch.'https://github.com/blu-dev/smash-rs']
# smash-rs = { package = "smash", path = "../smash-rs" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
