[package]
name = "acmd-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
locks.path = "../locks"
hash40 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
skyline_smash = { git = "https://github.com/blu-dev/skyline-smash" }
thiserror = "1"
parking_lot = { version = "0.12.1", optional = true }
