[package]
name = "actions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acmd-engine = { path = "../acmd-engine" }
bevy_reflect = { version = "0.11", optional = true }
bitflags = { version = "2", features = ["serde"] }
hash40 = "1"
lua_bind_hash = "*"
skyline_smash = { git = "https://github.com/blu-dev/skyline-smash" }
smashline = { path = "../smashline" }
smash_script = { git = "https://github.com/blu-dev/smash-script", branch = "development" }
serde = { version = "1", features = ["derive"] }
glam = { version = "0.24.2", features = ["serde"] }

[features]
bevy_reflect = ["dep:bevy_reflect", "acmd-engine/parking_lot"]
