[package]
name = "vtable-macro"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector.workspace = true
proc-macro-crate.workspace = true
proc-macro-error.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[lib]
proc-macro = true
