[package]
name = "vtables"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rtld.path = "../rtld"
skyline.workspace = true
vtable-macro.path = "../vtable-macro"
thiserror = "1"